# crab-snake

./: Cargo.toml  README.md  pyproject.toml  speed_test.py
crab/: lib.rs
snake/: __init__.py  random_points.py
src/: random_points.rs
