[tool.poetry]
name = "crab-snake"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["magi-1"]
packages = [{include = "snake"}]

[tool.poetry.dependencies]
python = "~=3.8"
click = "^8.1.3"
maturin = "^0.14.17"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
release = true
python-source = "snake"

[tool.poetry.scripts]
speed_test = 'speed_test:main'
